<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@drawable/style_gradient_blue_grey">


    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/guthib_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:fontFamily="@font/poppins_italic"
        android:text="Voir le projet sur Github"
        android:autoLink="web"
        android:textAlignment="center"
        android:textColor="@color/light_blue_200"
        android:textSize="15sp" />

    <!-- Paragraph -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/main_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <!-- Question -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/main_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <!-- Tuto -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/main_2_tuto_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/main_2_tuto_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/main_2_tuto_3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/main_2_tuto_4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <!-- Button to exit the application -->
    <Button
        android:id="@+id/exit_button"
        android:background="@drawable/style_button"
        android:textColor="@color/white"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_margin="40dp"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:text="@string/exit_button" />


</LinearLayout>